--- a/furfuturefunding/package.json
+++ b/furfuturefunding/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.2",
-    "react-select": "^5.10.0"
+    "react-select": "^5.10.0",
+    "sweetalert2": "^11.15.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
